@@ -1,3 +1,5 @@
+[B]2.1.4[/B]
+- Added The News with Dan Rather
 [B]2.1.3[/B]
 - Added Rebel Headquarters
 [B]2.1.2[/B]
